--- a/src/app/shared/dialogs/gstin-missing/gstin-missing.component.html
+++ b/src/app/shared/dialogs/gstin-missing/gstin-missing.component.html
@@ -10,8 +10,6 @@
 
 <div class="col-xs-12 text-center">
   <a [routerLink]="['/project-dashboard']" [queryParams]="{projectId: data.projectId}">
-    <button (click)="close()" mat-raised-button class="main-background-color main-button color-white">
-      View Project Store
-    </button>
+    <button (click)="close()" mat-raised-button class="main-background-color main-button color-white">View Project Store</button>
   </a>
 </div>
