--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -123,6 +123,10 @@ div.limited-character.universal {
 .border-radius {
   border-radius: 10px !important;
 }
+.border-radius-tltr-5px {
+  border-radius: 5px 5px 0px 0px !important;
+}
+
 .border-round {
   border-radius: 10px !important;
 }
