--- a/src/app/shared/dialogs/add-address/add-address.component.html
+++ b/src/app/shared/dialogs/add-address/add-address.component.html
@@ -12,7 +12,7 @@
         <mat-tab label="Choose Address" class="addressDialog">
           <ng-container *ngIf="address && address[0].addressId > 0; else noAddress">
             <form *ngIf="address" [formGroup]="selectAddressFrm">
-              <div class="row py-3">
+              <div class="row p-rem-t-10 p-rem-b-10">
                 <div class="col-md-12 col-xs-12" [class.single-address-line]="address.length === 1">
                   <mat-radio-group aria-label="Select an option" name="address" formControlName="address">
                     <div class="address-line" *ngFor="let add of address">
@@ -24,7 +24,9 @@
                           <span *ngIf="add.state">, {{ add.state }}</span>
                           <span *ngIf="add.pinCode">, {{ add.pinCode }}</span>
                           <span *ngIf="add.gstNo"> | {{ add.gstNo }}</span>
-                          <button (click)="changeIndex(add)">edit</button>
+                          <span class="p-t-5 p-l-10">
+                            <a href="javascript:void(0)" (click)="changeIndex(add)"><i class="material-icons main-color"> edit </i></a>
+                          </span>
                         </div>
                       </mat-radio-button>
                     </div>
@@ -43,9 +45,9 @@
           </ng-template>
         </mat-tab>
 
-        <mat-tab label="Add Address">
+        <mat-tab label="{{ tab2Label }}">
           <form [formGroup]="newAddressForm">
-            <div class="add-address-dialog-div-main">
+            <div class="add-address-dialog-div-main p-rem-t-10">
               <div class="row">
                 <div class="col-xs-12 col-sm-6">
                   <div class="row border-input">
@@ -74,7 +76,7 @@
               </div>
 
               <div class="row">
-                <div class="col-xs-6">
+                <div class="col-xs-6 p-t-6">
                   <!-- country -->
                   <mat-form-field class="border-select address-select-country mat-form-field-infix-padding-top mat-form-field-flex-mm-padding mt6p width-100">
                     <mat-select formControlName="countryCode" (selectionChange)="blankPincode()">
@@ -120,7 +122,7 @@
                 <div class="col-xs-6">
                   <div class="row border-input p-t-0">
                     <mat-form-field class="col-xs-12">
-                      <input matInput type="string" (input)="getPincode($event)" placeholder="Pincode" formControlName="pinCode" />
+                      <input matInput type="string" placeholder="Pincode" formControlName="pinCode" />
                     </mat-form-field>
                     <ng-container *ngIf="newAddressForm.controls['pinCode'].touched">
                       <small *ngIf="newAddressForm.controls['pinCode'].hasError('required') && pincodeLength <= 0" class="form-error-msg p-l-15"> Pincode is required </small>
@@ -152,7 +154,7 @@
                 <div class="col-xs-12 col-sm-6">
                   <div class="row border-input p-t-0">
                     <mat-form-field class="col-xs-12">
-                      <input matInput type="text" placeholder="GSTIN" formControlName="gstNo" />
+                      <input matInput type="text" placeholder="{{ this.countryCode === "IN" ? "GSTIN:" : "Tax Code:" }}" formControlName="gstNo" />
                     </mat-form-field>
                     <small *ngIf="newAddressForm.controls['gstNo'].hasError('required') && newAddressForm.controls['gstNo'].touched" class="form-error-msg p-l-15">
                       GSTIN is required
@@ -172,7 +174,7 @@
                 cdkFocusInitial
                 (click)="onAddAddress()"
               >
-                Add
+                {{ tab2Label === "Add Address" ? "Add" : "Edit" }}
               </button>
             </div>
           </form>
