--- a/src/app/shared/dialogs/add-grn/add-material/add-material.component.html
+++ b/src/app/shared/dialogs/add-grn/add-material/add-material.component.html
@@ -17,6 +17,14 @@
                 >maximun characters allowed is 300</small
               >
             </mat-form-field>
+            <small
+              *ngIf="
+                addMaterialsForm.get('addMaterial')['controls'][i]['controls']['materialName'].errors?.required &&
+                addMaterialsForm.get('addMaterial')['controls'][i]['controls']['materialName'].touched
+              "
+              class="warning-color"
+              >Material name is required
+            </small>
           </div>
 
           <!-- Material Unit Dropdown Field -->
@@ -44,16 +52,32 @@
                   </span>
                 </mat-option>
               </mat-select>
-              <small *ngIf="addMaterialsForm.get('addMaterial')['controls'][i]['controls']['materialUnit'].errors?.maxlength" class="warning-color"
-                >maximun characters allowed is 300</small
-              >
             </mat-form-field>
+            <small
+              *ngIf="
+                addMaterialsForm.get('addMaterial')['controls'][i]['controls']['materialUnit'].errors?.required &&
+                addMaterialsForm.get('addMaterial')['controls'][i]['controls']['materialUnit'].touched
+              "
+              class="warning-color"
+              >Unit is required</small
+            >
+            <small *ngIf="addMaterialsForm.get('addMaterial')['controls'][i]['controls']['materialUnit'].errors?.maxlength" class="warning-color"
+              >maximun characters allowed is 300</small
+            >
           </div>
 
           <!-- Material Quantity Input Field -->
           <div class="col-md-2 col-sm-4 col-xs-7">
             <mat-form-field class="border-input p-l-0 label-font-size w-100">
               <input formControlName="deliveredQty" appTwoDigitDecimaNumber matInput type="text" placeholder="Quantity*" />
+              <small
+                *ngIf="
+                  addMaterialsForm.get('addMaterial')['controls'][i]['controls']['deliveredQty'].errors?.required &&
+                  addMaterialsForm.get('addMaterial')['controls'][i]['controls']['deliveredQty'].touched
+                "
+                class="warning-color"
+                >Quantity is required</small
+              >
               <small *ngIf="addMaterialsForm.get('addMaterial')['controls'][i]['controls']['deliveredQty'].errors?.maxlength" class="warning-color"
                 >maximun characters allowed is 300</small
               >
@@ -64,6 +88,15 @@
           <div class="col-md-2 col-sm-4 col-xs-12">
             <mat-form-field class="border-input label-font-size w-100">
               <input formControlName="pendingQty" appTwoDigitDecimaNumber matInput type="text" placeholder="Pending Qty*" />
+              <small
+                *ngIf="
+                  addMaterialsForm.get('addMaterial')['controls'][i]['controls']['pendingQty'].errors?.required &&
+                  addMaterialsForm.get('addMaterial')['controls'][i]['controls']['pendingQty'].touched
+                "
+                class="warning-color"
+              >
+                Pending Qty is required</small
+              >
               <small *ngIf="addMaterialsForm.get('addMaterial')['controls'][i]['controls']['pendingQty'].errors?.maxlength" class="warning-color"
                 >maximun characters allowed is 300</small
               >
@@ -74,6 +107,14 @@
           <div class="col-md-2 col-sm-4 col-xs-12">
             <mat-form-field class="border-input label-font-size w-100">
               <input formControlName="materialUnitPrice" appTwoDigitDecimaNumber matInput type="text" placeholder="Unit Price*({{ currency }})" />
+              <small
+                *ngIf="
+                  addMaterialsForm.get('addMaterial')['controls'][i]['controls']['materialUnitPrice'].errors?.required &&
+                  addMaterialsForm.get('addMaterial')['controls'][i]['controls']['materialUnitPrice'].touched
+                "
+                class="warning-color"
+                >Unit price is required</small
+              >
               <small *ngIf="addMaterialsForm.get('addMaterial')['controls'][i]['controls']['materialUnitPrice'].errors?.maxlength" class="warning-color"
                 >maximun characters allowed is 300</small
               >
@@ -84,6 +125,14 @@
           <div class="col-md-2 col-total-amount col-sm-4 col-xs-12">
             <mat-form-field class="border-input label-font-size w-100">
               <input formControlName="amount" appTwoDigitDecimaNumber matInput type="text" placeholder="Total Amt*({{ currency }})" />
+              <small
+                *ngIf="
+                  addMaterialsForm.get('addMaterial')['controls'][i]['controls']['amount'].errors?.required &&
+                  addMaterialsForm.get('addMaterial')['controls'][i]['controls']['amount'].touched
+                "
+                class="warning-color"
+                >Amount is required</small
+              >
               <small *ngIf="addMaterialsForm.get('addMaterial')['controls'][i]['controls']['amount'].errors?.maxlength" class="warning-color"
                 >maximun characters allowed is 300</small
               >
