--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -194,7 +194,11 @@ a:hover {
 }
 
 .text-semi-bold {
-  font-weight: 500;
+  font-weight: 500 !important;
+}
+
+.background-modal-grey {
+  background-color: $modal-background-color !important;
 }
 
 .text-very-light {
@@ -215,7 +219,7 @@ a:hover {
 }
 
 .text-bold {
-  font-weight: 800;
+  font-weight: 800 !important;
 }
 
 .margin-0-auto {
