--- a/src/assets/scss/pages/grn.scss
+++ b/src/assets/scss/pages/grn.scss
@@ -233,23 +233,68 @@ $mat-row-horizontal-padding: 12px;
 
 /** Add Receipt Via System, Add Custom Material Dialog CSS **/
 
-.create-receipt-excel, .add-receipt-via-system, .add-custom-material, .issue-to-indent-dialog, .upload-image-modal, .view-image-modal,
-.delete-bom, .payment-record-dialog, .add-receipts-dialog, .show-docs-dialog, .drafted-po-confirm-dialog, .select-currency-dialog,
-.select-contact-person-dialog, .add-address-dialog, .select-approver-dialog, .show-supplier-remarks-docs, .select-rfq-terms-dialog,
-.float-rfq-confirm-dialog, .add-users-dialog, .add-project-dialog, .deactivate-user, .vendor-rating-dialog, .tax-dialog, 
-.choose-address-dialog, .select-projects-dialog, .view-video-dialog, .release-note-dialog{
-  .mat-dialog-container{
+.create-receipt-excel,
+.add-receipt-via-system,
+.add-custom-material,
+.issue-to-indent-dialog,
+.upload-image-modal,
+.view-image-modal,
+.delete-bom,
+.payment-record-dialog,
+.add-receipts-dialog,
+.show-docs-dialog,
+.drafted-po-confirm-dialog,
+.select-currency-dialog,
+.select-contact-person-dialog,
+.add-address-dialog,
+.select-approver-dialog,
+.show-supplier-remarks-docs,
+.select-rfq-terms-dialog,
+.float-rfq-confirm-dialog,
+.add-users-dialog,
+.add-project-dialog,
+.deactivate-user,
+.vendor-rating-dialog,
+.tax-dialog,
+.choose-address-dialog,
+.select-projects-dialog,
+.view-video-dialog,
+.release-note-dialog {
+  .mat-dialog-container {
     padding: 0px !important;
     overflow-x: hidden;
   }
 }
 
-.create-receipt-excel, .add-receipt-via-system, .add-custom-material, .issue-to-indent-dialog, .upload-image-modal, .view-image-modal,
-.delete-bom, .payment-record-dialog, .add-receipts-dialog, .show-docs-dialog, .drafted-po-confirm-dialog, .select-currency-dialog,
-.select-contact-person-dialog, .add-address-dialog, .add-project-dialog, .add-supplier-dialog, .select-approver-dialog, .show-supplier-remarks-docs, 
-.select-rfq-terms-dialog, .float-rfq-confirm-dialog, .add-users-dialog, .deactivate-user, .vendor-rating-dialog, .tax-dialog, 
-.choose-address-dialog, .select-projects-dialog, .view-video-dialog, .release-note-dialog{
-  .mat-dialog-content{
+.create-receipt-excel,
+.add-receipt-via-system,
+.add-custom-material,
+.issue-to-indent-dialog,
+.upload-image-modal,
+.view-image-modal,
+.delete-bom,
+.payment-record-dialog,
+.add-receipts-dialog,
+.show-docs-dialog,
+.drafted-po-confirm-dialog,
+.select-currency-dialog,
+.select-contact-person-dialog,
+.add-address-dialog,
+.add-project-dialog,
+.add-supplier-dialog,
+.select-approver-dialog,
+.show-supplier-remarks-docs,
+.select-rfq-terms-dialog,
+.float-rfq-confirm-dialog,
+.add-users-dialog,
+.deactivate-user,
+.vendor-rating-dialog,
+.tax-dialog,
+.choose-address-dialog,
+.select-projects-dialog,
+.view-video-dialog,
+.release-note-dialog {
+  .mat-dialog-content {
     padding: 0;
     overflow-x: hidden;
   }
@@ -273,10 +318,21 @@ $mat-row-horizontal-padding: 12px;
   }
 }
 
-.create-receipt-excel, .add-receipt-via-system, .delete-bom, .add-supplier-dialog, .payment-record-dialog,
-.add-receipts-dialog, .show-docs-dialog, .select-contact-person-dialog, .add-address-dialog, .show-supplier-remarks-docs, 
-.vendor-rating-dialog, .select-projects-dialog, .view-video-dialog, .release-note-dialog{
-  .modal-body{
+.create-receipt-excel,
+.add-receipt-via-system,
+.delete-bom,
+.add-supplier-dialog,
+.payment-record-dialog,
+.add-receipts-dialog,
+.show-docs-dialog,
+.select-contact-person-dialog,
+.add-address-dialog,
+.show-supplier-remarks-docs,
+.vendor-rating-dialog,
+.select-projects-dialog,
+.view-video-dialog,
+.release-note-dialog {
+  .modal-body {
     padding: 1rem 2.5rem;
   }
 }
@@ -432,8 +488,12 @@ $mat-row-horizontal-padding: 12px;
   }
 }
 
-.delete-bom, .drafted-po-confirm-dialog, .add-users-dialog, .choose-address-dialog, .add-project-dialog{
-  .modal-body{
+.delete-bom,
+.drafted-po-confirm-dialog,
+.add-users-dialog,
+.choose-address-dialog,
+.add-project-dialog {
+  .modal-body {
     padding: 1.5rem 2.5rem;
   }
 }
@@ -502,23 +562,12 @@ $mat-row-horizontal-padding: 12px;
 }
 
 .add-address-dialog {
-  .single-address-line .mat-radio-group .address-line {
-    &:first-child {
-      border-bottom: 1px solid #b8b8b8;
-    }
+  .mat-radio-group .address-line {
+    border-bottom: 1px solid #b8b8b8;
+    padding: 10px 0px;
   }
 
   .mat-radio-group .address-line {
-    &:not(:first-child) {
-      border: 1px solid #b8b8b8;
-      padding: 10px 0px;
-    }
-    &:first-child {
-      border: 1px solid #b8b8b8;
-      border-bottom: none;
-      padding: 10px 0px;
-    }
-
     .mat-radio-label {
       margin-bottom: 0px;
     }
