--- a/src/app/shared/dialogs/add-grn/add-grn.component.html
+++ b/src/app/shared/dialogs/add-grn/add-grn.component.html
@@ -1,6 +1,6 @@
 <section class="modal-outer">
   <div class="modal-header">
-    <h5 mat-dialog-title class="mb-0">Direct Purchase via system</h5>
+    <h5 mat-dialog-title class="mb-0">Direct Purchase via System</h5>
 
     <button type="button" class="close" (click)="cancel()" aria-label="Close">
       <span aria-hidden="true">×</span>
