--- a/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
+++ b/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
@@ -10,24 +10,24 @@
     <div mat-dialog-content>
       <div class="modal-body">
         <div class="row p-b-10">
-          <div class="col-xs-12 display-flex supplier-dialog">
-            <mat-form-field class="border-input add-supplier-name">
+          <div class="col-xs-12">
+            <mat-form-field class="border-input add-supplier-name width-100">
               <input matInput type="text" formControlName="supplier_name" placeholder="Supplier Name *" />
               <mat-error class="form-error-msg p-t-10">Supplier name is Required</mat-error>
             </mat-form-field>
           </div>
 
-          <div class="col-xs-12 display-flex supplier-dialog">
-            <mat-form-field class="border-input">
+          <div class="col-xs-12 supplier-email-input">
+            <mat-form-field class="border-input width-100">
               <input matInput type="email" formControlName="email" placeholder="Email *" />
               <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched" class="form-error-msg"> Email is required </small>
               <small *ngIf="form.controls['email'].hasError('pattern') && form.controls['email'].touched" class="form-error-msg"> Enter Valid Email</small>
             </mat-form-field>
           </div>
 
-          <div class="col-xs-12 display-flex supplier-dialog p-l-0 p-r-0">
+          <div class="col-xs-12 p-l-0 p-r-0 display-flex">
             <div class="col-xs-4 col-md-2">
-              <mat-form-field class="border-select mat-form-field-flex-mm-padding">
+              <mat-form-field class="border-select mat-form-field-flex-mm-padding width-100">
                 <mat-select formControlName="countryCode">
                   <div class="display-flex">
                     <input
@@ -66,7 +66,7 @@
             </div>
 
             <div class="col-xs-8 col-md-10">
-              <mat-form-field class="border-input">
+              <mat-form-field class="border-input width-100">
                 <ng-container *ngIf="isNational; else nonInt">
                   <input matInput type="text" formControlName="contact_no" placeholder="Phone No. *" />
                   <small *ngIf="form.controls['contact_no'].hasError('required') && form.controls['contact_no'].touched" class="form-error-msg"> Phone No is required </small>
