--- a/src/app/shared/dialogs/payment-record/paymentRecord.component.html
+++ b/src/app/shared/dialogs/payment-record/paymentRecord.component.html
@@ -36,11 +36,13 @@
                 {{ paymentDetail.totalPoAmount ? (paymentDetail.totalPoAmount | number: "1.2-2") : (0 | number: "1.2-2") }}
                 {{ paymentDetail.purchaseOrderCurrency ? paymentDetail.purchaseOrderCurrency.exchangeCurrencyName : paymentDetail.currencyCode }}
 
-                <span class="info-icon info-tootip"
-                  ><img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
+                <span class="info-icon info-tootip">
+                  
+                  <img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
+
                   <span class="info-tootip__content">
                     <div class="tooltip-table maxwidth-270-px m-l-0">
-                      <div class="row mb-1">
+                      <div class="row">
                         <div class="col-sm-12">
                           <span class="p-r-0"> Total Amount : {{ paymentDetail.poAmount - paymentDetail.gstAmount | number: "1.2-2" }}</span>
                           <span class="p-l-0 m-l-0">{{
