--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -869,6 +869,10 @@ h3 {
   padding: 6px 0;
 }
 
+.supplier-email-input{
+  padding: 10px 0.5rem 0 0.5rem;
+}
+
 @media only screen and (min-width: 576px) and (max-width: 768px) {
   .header-project-menu.mat-menu-panel {
     width: 200px;
