--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -274,6 +274,15 @@ input {
   font-weight: 600;
   height: 40px;
 }
+
+.bs-button.mat-button-base {
+  border: 2px solid $main-color !important;
+  border-radius: 25px;
+  padding: 0px 20px;
+  font-weight: 600;
+  height: 40px;
+}
+
 @media only screen and (max-width: 576px) {
   .main-button.mat-button-base {
     border: 2px solid $main-color !important;
